replace links to testcase with embedded test

--- a/packages/website/src/pages/spec/01-introduction/index.mdx
+++ b/packages/website/src/pages/spec/01-introduction/index.mdx
@@ -2,9 +2,6 @@
 title: 'Introduction'
 layout: src/layouts/Layout.astro
 ---
-import Testcase from 'src/components/Testcase.astro';
-
-import example from './example.hb-spec.json'
 
 # Introduction
 
@@ -43,4 +40,4 @@ There is also a documented JSON schema for the test-case and for the AST.
 
 This is a simple example of a test-case:
 
-<Testcase spec={example} />
+[](./example.hb-spec.json)
