--- a/packages/@handlebars-ng/specification/dump/test.mdx
+++ b/packages/@handlebars-ng/specification/dump/test.mdx
@@ -1,11 +1,9 @@
 ---
-title: 'Introduction'
+title: "Introduction"
 layout: ../../layouts/Layout.astro
 ---
 
-
 # Hi there
-
 
 ## Hi again
 
@@ -16,4 +14,3 @@ layout: ../../layouts/Layout.astro
 ##### more
 
 Text
-
