--- a/packages/@handlebars-ng/specification/src/pages/spec/01-introduction/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/01-introduction/index.mdx
@@ -12,6 +12,10 @@ have followed. The goal of this document is to define
 the language and provide language-independent
 test-cases that allow implementations to converge.
 
+```handlebars
+{{hello}}
+```
+
 ## Basic structure
 
 A Handlebars implementation consists of multiple
