reduce width on large screens

--- a/packages/@handlebars-ng/specification/src/pages/spec/01-introduction/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/01-introduction/index.mdx
@@ -6,13 +6,12 @@ layout: "@/layouts/MarkdownLayout.astro"
 # Introduction
 
 The Handlebars language is a templating language,
-that was originally implemented in JavaScript.
-Since then, implemntations in many other languages
-have followed. The goal of this document is to define
+that was originally implemented by Yehuda Katz in JavaScript (see https://handlebarsjs.com).
+
+Since then, implementations in many other languages
+have been created. The goal of this document is to define
 the language and provide language-independent
 test-cases that allow implementations to converge.
-
-
 
 ## Basic structure
 
