--- a/packages/@handlebars-ng/specification/src/pages/spec/03-template-syntax/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/03-template-syntax/index.mdx
@@ -2,7 +2,7 @@
 
 A template (Program) consists of zero or more Statements
 
-```ebnf
+```
 Program = { Statement }
 
 Statement =
@@ -17,12 +17,12 @@ Statement =
 Everything that is not any other Statment is considered to be Content.
 Content is copied "as is" to the output.
 
-[](./contents.hb-spec.json)
+[](./content.hb-spec.json)
 
 An exception are escaped mustache statements.
 If a mustache token (`{{`) is prefixed with `\`, the backslash is removed from the output, but the `{{` remains.
 
-[](./escaped-mustaches.hb-spec.json)
+[](./escaped-content.hb-spec.json)
 
 ```handlebars
 {{path.expression}}
