add normalizer to "original" spec, change expected outcome of escaped "original value" in AST

--- a/packages/@handlebars-ng/specification/src/pages/spec/03-template-syntax/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/03-template-syntax/index.mdx
@@ -20,7 +20,7 @@ Content is copied "as is" to the output.
 [](./content.hb-spec.json)
 
 An exception are escaped mustache statements.
-If a mustache token (`{{`) is prefixed with `\`, the backslash is removed from the output, but the `{{` remains.
+If a mustache token (`{{` or `{{{`) is prefixed with `\`, the backslash is removed from the output, but the `{{` remains.
 
 [](./escaped-content.hb-spec.json)
 
