--- a/packages/@handlebars-ng/specification/src/pages/spec/02-abstract-syntax-tree/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/02-abstract-syntax-tree/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The Abstract Syntax Tree"
-layout: "@/layouts/MarkdownLayout.astro"
+layout: "@/layouts/SpecLayout.astro"
 ---
 
 # The Abstract Syntax Tree
