--- a/packages/@handlebars-ng/specification/src/pages/spec/03-program/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/03-program/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "The 'Program'"
-layout: "@/layouts/MarkdownLayout.astro"
+title: "The Program"
+layout: "@/layouts/SpecLayout.astro"
 ---
 
 # Template Syntax
