--- a/packages/@handlebars-ng/specification/src/pages/spec/04-content-statement/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/04-content-statement/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "The 'Content Statement'"
-layout: "@/layouts/MarkdownLayout.astro"
+title: "The Content Statement"
+layout: "@/layouts/SpecLayout.astro"
 ---
 
 # Content Statement
