--- a/packages/@handlebars-ng/specification/src/pages/spec/05-mustache-statement/index.mdx
+++ b/packages/@handlebars-ng/specification/src/pages/spec/05-mustache-statement/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The Mustache Statement"
-layout: "@/layouts/MarkdownLayout.astro"
+layout: "@/layouts/SpecLayout.astro"
 ---
 
 # Mustache-Statement
