--- a/packages/handlebars-ng.knappi.org/src/pages/impress/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/impress/index.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@/component/MxdLayout.astro"
+layout: "@/layouts/MdxLayout.astro"
 title: "Impress"
 ---
 
@@ -13,7 +13,9 @@ I use https://plausible.io to track website usage. It does not collect any perso
 
 Person responsible for the contents of this site:
 
+```
 Nils Knappmeier
 Maria-Sevenich-Weg 11
 64289 Darmstadt
 ☎ 0176/22024312
+```
