obfuscate personal address in code

--- a/packages/handlebars-ng.knappi.org/src/pages/impress/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/impress/index.mdx
@@ -3,6 +3,8 @@ layout: "@/layouts/MdxLayout.astro"
 title: "Impress"
 ---
 
+import Impress from "@/components/Impress/index.astro";
+
 # Privacy
 
 I don't use cookies on this site.
@@ -13,9 +15,4 @@ I use https://plausible.io to track website usage. It does not collect any perso
 
 Person responsible for the contents of this site:
 
-```
-Nils Knappmeier
-Maria-Sevenich-Weg 11
-64289 Darmstadt
-☎ 0176/22024312
-```
+<Impress />
