notice about benchmarks

--- a/packages/handlebars-ng.knappi.org/src/pages/benchmarks/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/benchmarks/index.mdx
@@ -11,6 +11,9 @@ These benchmarks are generated as part of the CI pipeline.
 We compare the original Handlebars parser with the next-generation parser,
 and the Handlebars compiler (template execution) with the next-generation runner
 
+_The benchmarks look very good, but please be aware that we have only implemented very basic features so far.
+I expect Handlebars NG to become slower when more features are implemented._
+
 # Parser
 
 <BenchmarkResult client:only name="parser" />
