use better statistics

--- a/packages/handlebars-ng.knappi.org/src/pages/benchmarks/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/benchmarks/index.mdx
@@ -22,8 +22,8 @@ standard-deviation is very high in some tests.
 
 ## How to read the data
 
-- The numbers in the table are "`mean (± sd)`" where `mean` is the average runtime of the test in milliseconds and `sd` is the standard deviation.
-- The charts show the range "`[ mean - sd, mean + sd ]`".
+- The numbers in the table are `x̄="mean" p99="99th percentile value"` of the runtime of each task
+- The charts show the range "`[ mean, p99 ]`".
 
 ## Parser
 
