--- a/packages/handlebars-ng.knappi.org/src/pages/helper-definitions/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/helper-definitions/index.mdx
@@ -11,6 +11,4 @@ import HelperDefinition from "@/components/helpers/HelperDefinition.astro";
 The spec defines a number of helpers that are used in test-cases.
 This is a list of all defined helper, including that JavaScript source code.
 
-{Object.keys(helpers).map(name => {
-return <HelperDefinition name={name} />
-})}
+{Object.keys(helpers).map(name => <HelperDefinition name={name} />)}
