enable playground, add ast view

--- a/packages/handlebars-ng.knappi.org/src/pages/playground/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/playground/index.mdx
@@ -10,8 +10,10 @@ import "@handlebars-ng/playground/dist/style.css";
 
 # Playground
 
-Here you can play with Handlebars and compare the results to handlebars-ng.
+Here you can play with "Handlebars - the next generation".
 
-&nbsp;
+<p class="my-5 text-red-500 border border-red-500 p-5 text-xl text-center rounded-xl">
+  Playground is still under construction!
+</p>
 
-{featPlayground ? <Playground client:only /> : <p class="text-red-500 border border-red-500 p-5 text-xl text-center rounded-xl" >Playground is still under construction!</p> }
+<Playground client:only />{" "}
