fix construction warning

--- a/packages/handlebars-ng.knappi.org/src/pages/playground/index.mdx
+++ b/packages/handlebars-ng.knappi.org/src/pages/playground/index.mdx
@@ -12,8 +12,6 @@ import "@handlebars-ng/playground/dist/style.css";
 
 Here you can play with "Handlebars - the next generation".
 
-<p class="my-5 text-red-500 border border-red-500 p-5 text-xl text-center rounded-xl">
-  Playground is still under construction!
-</p>
+**Playground is still under construction!**
 
 <Playground client:only />{" "}
